--- a/style.css
+++ b/style.css
@@ -71,7 +71,76 @@ img {
     border: 2px solid rgba(255, 192, 56, 0.335);
     background-color: rgba(255, 213, 146, 0.493);
 } 
+ 
 
-#loading-image { 
+.black_background{ 
+    display: none; 
+    position: absolute; 
+    background: #fffcf1be ;
+    z-index:1001; -moz-opacity: 0.8; opacity:.80; 
+    filter: alpha(opacity=60); 
     text-align: center;
+} 
+   
+.loadingio-spinner-wedges-ynx2h61thk{
+    margin-top: 10%;
 }
+
+@keyframes ldio-2hgux1lg16z {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(360deg) }
+  }
+  .ldio-2hgux1lg16z > div > div {
+    transform-origin: 100px 100px;
+    animation: ldio-2hgux1lg16z 3.0303030303030303s linear infinite;
+    opacity: 0.8
+  }
+  .ldio-2hgux1lg16z > div > div > div {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    width: 70px;
+    height: 70px;
+    border-radius: 70px 0 0 0;
+    transform-origin: 100px 100px
+  }.ldio-2hgux1lg16z > div div:nth-child(1) {
+    animation-duration: 0.7575757575757576s
+  }
+  .ldio-2hgux1lg16z > div div:nth-child(1) > div {
+    background: #292664;
+    transform: rotate(0deg);
+  }.ldio-2hgux1lg16z > div div:nth-child(2) {
+    animation-duration: 1.0101010101010102s
+  }
+  .ldio-2hgux1lg16z > div div:nth-child(2) > div {
+    background: #667395;
+    transform: rotate(0deg);
+  }.ldio-2hgux1lg16z > div div:nth-child(3) {
+    animation-duration: 1.5151515151515151s
+  }
+  .ldio-2hgux1lg16z > div div:nth-child(3) > div {
+    background: #94a9ce;
+    transform: rotate(0deg);
+  }.ldio-2hgux1lg16z > div div:nth-child(4) {
+    animation-duration: 3.0303030303030303s
+  }
+  .ldio-2hgux1lg16z > div div:nth-child(4) > div {
+    background: #b5ccf1;
+    transform: rotate(0deg);
+  }
+  .loadingio-spinner-wedges-ynx2h61thk {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    overflow: hidden;
+    background: #f1f2f300;
+  }
+  .ldio-2hgux1lg16z {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0; /* see note above */
+  }
+  .ldio-2hgux1lg16z div { box-sizing: content-box; }
