--- a/final/my_style.css
+++ b/final/my_style.css
@@ -96,7 +96,8 @@ img {
 
 
 .loadingio-spinner-wedges-ynx2h61thk{
-    margin-top: 10%;
+    margin-top: 15%;
+    margin-bottom: 10%;
 }
 
 @keyframes ldio-2hgux1lg16z {
