--- a/final/yearpicker.css
+++ b/final/yearpicker.css
@@ -4,16 +4,17 @@
     --text-color: #555;
     --selected-text-color: rgb(56, 241, 164);
     --hover-background-color: #eee;
-}
+} 
 
 .yearpicker-container {
     position: absolute;
     color: var(--text-color);
-    width: 280px;
+    width: 200px;
     border: 1px solid var(--border-color);
     border-radius: 3px;
     font-size: 1rem;
     box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, 0.2);
+    /* background-color: rgb(146, 23, 23); */
     background-color: var(--background-color);
     z-index: 10;
     margin-top: 0.2rem;
