--- a/final/my_style.css
+++ b/final/my_style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 body {  
-    background-color: rgb(255, 229, 187);
+    background-color: rgb(229, 234, 240);
     font-family: 'Nanum Gothic', sans-serif;
     font-size: small;
 }
@@ -17,7 +17,10 @@ h1 {
 }
 
 fieldset{
-    border: 1px solid rgba(255, 213, 146, 0.493);
+    position: relative;
+    border: 1px solid rgb(184, 190, 214);
+    text-align: left;
+    /* margin: 10px 0px; */
 }
  
 input, select{
@@ -29,8 +32,8 @@ input, select{
     margin: auto;
     padding: 20px;
     width: 600px;
-    border: 1px solid rgba(255, 192, 56, 0.335);
-    background-color: rgba(255, 255, 255, 0.781);
+    border: 1px solid rgb(184, 190, 214);
+    background-color: rgba(255, 255, 255, 0.897);
     border-radius: 20px;
     text-align: center;
 }
@@ -41,22 +44,35 @@ input, select{
   
   z-index: 10;
 }
-
-.field {
-    text-align: left;
-    margin: 10px 0px;
-}
+ 
 
 #result {
-    box-sizing: border-box;
-    margin: 50px auto;
-    padding: 0px 30px;
-    padding-bottom: 20px;
-    width: 600px;
-    border: 1px solid rgba(255, 192, 56, 0.335);
-    background-color: rgba(255, 255, 255, 0.781);
-    border-radius: 20px;
+  box-sizing: border-box;
+  margin: 50px auto;
+  padding: 0px 50px;
+  padding-bottom: 20px;
+  width: 600px;
+  border: 1px solid rgb(184, 190, 214);
+  background-color: rgba(255, 255, 255, 0.897);
+  border-radius: 20px;
+}
+ 
 
+#set-chart {
+  margin-bottom: 5%;
+}
+
+#result_chart { 
+  width: 100%;
+  height: 100%;
+
+  background-color: rgb(229, 234, 240);
+
+}
+#line-chart{
+    z-index: -1;
+     width: 100%;
+   height: 100%;
 }
 
 img {
@@ -75,30 +91,33 @@ img {
     height: 40px;
     width: 200px;
     border-radius: 20px;
-    border: 2px solid rgba(255, 192, 56, 0.335);
-    background-color: rgba(255, 213, 146, 0.493);
-} 
- 
-
-.black_background{ 
-    display: none; 
-    position: absolute; 
-    background: #fffcf1be ;
-    z-index:1001; -moz-opacity: 0.8; opacity:.80; 
-    filter: alpha(opacity=60); 
-    text-align: center;
+    border: 2px solid rgba(255, 192, 56, 0);
+    background-color: rgb(184, 190, 214);
 } 
    
-#line-chart{
-    z-index: -1;
+
+
+div{
+  clear: left;
+}
+
+.set-years {
+  clear: none;
+  float: left;
 }
 
 
+/* loading animation */
 
-.loadingio-spinner-wedges-ynx2h61thk{
-    margin-top: 15%;
-    margin-bottom: 10%;
-}
+.black_background{ 
+  display: none; 
+  position: absolute; 
+  background: rgba(231, 236, 255, 0.801);
+  z-index:1001; -moz-opacity: 0.8; opacity:.80; 
+  filter: alpha(opacity=60); 
+  text-align: center;
+} 
+ 
 
 @keyframes ldio-2hgux1lg16z {
     0% { transform: rotate(0deg) }
@@ -145,9 +164,8 @@ img {
   .loadingio-spinner-wedges-ynx2h61thk {
     width: 200px;
     height: 200px;
-    display: inline-block;
     overflow: hidden;
-    background: #f1f2f300;
+    background: #1289ff00;
   }
   .ldio-2hgux1lg16z {
     width: 100%;
